--- a/variables.yaml
+++ b/variables.yaml
@@ -8,4 +8,4 @@
   tasks:
   - name: print information
     ansible.builtin.debug:
-       msg: "Hi, we are learning {{Course}} Ansible from {{Trainer}} Sivakumar, {{Duration}} is 120hrs"
+       msg: "Hi, we are learning {{Course}} from {{Trainer}} and {{Duration}} is 120hrs"
