--- a/variables.yaml
+++ b/variables.yaml
@@ -9,4 +9,4 @@
   tasks:
   - name: print information
     ansible.builtin.debug:
-       msg: "Hi, we are learning {{Course}} from {{Trainer}} and duration is {{Duration}} and fees is {{Fees}}
+       msg: "Hi, we are learning {{Course}} from {{Trainer}} and duration is {{Duration}} and fees is {{Fees}}"
