--- a/variables.yaml
+++ b/variables.yaml
@@ -2,9 +2,9 @@
 - name: variables
   hosts: localhost
   vars:
-    Course: "Jenkins"
+    Course: "Ansible"
     Trainer: "Sivakumar"
-    Duration: "150hrs"
+    Duration: "120hrs"
     Fees: "25000"
   tasks:
   - name: print information
