--- a/vars.yaml
+++ b/vars.yaml
@@ -1,3 +1,9 @@
-Cource: "DevOps & AWS"
-Trainer: "Shivakumar"
-Duration: "3.5 months"
+---
+- name: variables
+  hosts: localhost
+  vars_files:
+  - vars-file.yaml
+  tasks:
+  - name: print information
+    ansible.builtin.debug:
+       msg: "Hi, we are learning {{Course}} from {{Trainer}} and duration is {{Duration}} and fees is {{Fees}}"
