--- a/vars-file.yaml
+++ b/vars-file.yaml
@@ -1,3 +1,7 @@
-Course: "DevOps & AWS"
-Trainer: "Shivakumar"
-Duration: "3.5 months"
+#Course: "DevOps & AWS"
+#Trainer: "Shivakumar"
+#Duration: "3.5 months"
+
+Env: "Dev"
+Project: "MIP"
+type: "A"
