--- a/vars.yaml
+++ b/vars.yaml
@@ -6,4 +6,4 @@
   tasks:
   - name: print information
     ansible.builtin.debug:
-       msg: "Hi, we are learning {{Course}} from {{Trainer}} and duration is {{Duration}}"
+       msg: "execute playbook {{ENV}} for {{Project}} and {{type}}
