--- a/vars.yaml
+++ b/vars.yaml
@@ -6,4 +6,4 @@
   tasks:
   - name: print information
     ansible.builtin.debug:
-       msg: "execute playbook {{ENV}} for {{Project}} and {{type}}
+       msg: "execute playbook {{ENV}} for {{Project}} and {{type}}"
